rust_writer_procedural/tests/ui/finder_fails_to_use_from_method_without_impl_from.stderr
error[E0277]: the trait bound `SomeStruct<'_>: From<(ItemToTrait<'_>, ItemToImpl<'_>)>` is not satisfied
  --> tests/ui/finder_fails_to_use_from_method_without_impl_from.rs:28:63
   |
28 |     let _some_struct: SomeStruct = (item_to_trait, item_to_impl).into();
   |                                                                  ^^^^ the trait `From<(ItemToTrait<'_>, ItemToImpl<'_>)>` is not implemented for `SomeStruct<'_>`
   |
   = note: required for `(ItemToTrait<'_>, ItemToImpl<'_>)` to implement `Into<SomeStruct<'_>>`
